manifests/edp-headlamp-0.16.0-SNAPSHOT.1.tgz-manifest.yaml
---
# Source: edp-headlamp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    helm.sh/chart: edp-headlamp-0.16.0-SNAPSHOT.1
    app.kubernetes.io/name: portal
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.0-SNAPSHOT.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: portal
    app.kubernetes.io/instance: my-release
---
# Source: edp-headlamp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  labels:
    helm.sh/chart: edp-headlamp-0.16.0-SNAPSHOT.1
    app.kubernetes.io/name: portal
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.0-SNAPSHOT.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: edp-headlamp
      securityContext:
        {}
      containers:
        - name: portal
          securityContext:
            {}
          image: "epamedp/edp-headlamp:0.16.0-SNAPSHOT.1"
          imagePullPolicy: 
          
          args:
            - "-in-cluster"
            - "-plugins-dir=/headlamp/plugins"
            
          ports:
            - name: http
              containerPort: 4466
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 4466
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 20
            successThreshold: 1
            tcpSocket:
              port: 4466
            timeoutSeconds: 1
          resources:
            {}
          volumeMounts:
      volumes:
---
# Source: edp-headlamp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
  labels:
    helm.sh/chart: edp-headlamp-0.16.0-SNAPSHOT.1
    app.kubernetes.io/name: portal
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.16.0-SNAPSHOT.1"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: portal-default.%!s(<nil>)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal
                port:
                  number: 80
